@@ -601,8 +601,8 @@ algorithm 29		: RSA-SHA1-2		: sha1WithRSA
 
 X500 4			: X509
 X509 3			: CN			: commonName
-X509 4			: S			: surname
-X509 5			: SN			: serialNumber
+X509 4			: SN			: surname
+X509 5			: 			: serialNumber
 X509 6			: C			: countryName
 X509 7			: L			: localityName
 X509 8			: ST			: stateOrProvinceName
